fixed index file to make note appear to side of articles

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <div id="wrapper">
       <h1>WebScraper</h1>
       <h2>Scraped Articles Below</h2>
-      <div id="articles"</div>
+      <div id="articles"></div>
       <div id="notes"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
